--- a/src/components/JournalAddButton/JournalAddButton.css
+++ b/src/components/JournalAddButton/JournalAddButton.css
@@ -1,4 +1,14 @@
 .journal-add {
   padding: 10px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.journal-add__icon {
+  color: #FFFFFF;
 }
