--- a/src/components/JournalForm/JournalForm.module.css
+++ b/src/components/JournalForm/JournalForm.module.css
@@ -4,6 +4,39 @@
   gap: 30px;
 }
 
+.input-title {
+  border: none;
+  background: none;
+  font-size: 32px;
+  font-weight: 600;
+  border-bottom: 1px solid #333333;
+  outline: none;
+  width: 100%;
+}
+
+.form-row {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.form-label {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  min-width: 150px;
+}
+
+.input {
+  border: none;
+  background: none;
+  font-size: 14px;
+  font-weight: 600;
+  border-bottom: 1px solid #333333;
+  outline: none;
+  width: 100%;
+}
+
 .invalid {
   border: 1px solid red;
   background: rgb(113, 21, 21);
